--- a/index.html
+++ b/index.html
@@ -6,33 +6,35 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thalby</title>
-    <link rel="stylesheet" href="css/mobile_menu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+
 
 
 </head>
 <body>
     <header>
         <div class="header__container">
-            <nav>
-                <div class="menu-btn">
-                    <div class="line line--1"></div>
-                    <div class="line line--2"></div>
-                    <div class="line line--3"></div>
+                <div class="menu__btm">
+                    <span></span>
                 </div>
-
-                <div class="nav-links">
-                    <a href="" class="link">Shop</a>
-                    <a href="" class="link">Collections</a>
-                    <a href="" class="link">Try a Free Guide</a>
-                    <a href="" class="link">Stories</a>
-                </div>
+            <nav class="menu__body">
+                <ul class="menu__list">
+                    <li><a href="" class="menu__link">Shop</a></li>
+                    <li><a href="" class="menu__link">Collections</a></li>
+                    <li><a href="" class="menu__link">Try a Free Guide</a></li>
+                    <li><a href="" class="menu__link">Stories</a></li>
+                </ul>
             </nav>
             <a href="#" class="header__logo">
-                <img src="images/logo.svg" alt="logo">
+                <img src="images/logo.gif" alt="logo">
             </a>
-            <ul class="icon_container">
+            <ul class="menu__icon">
                 <li><a href="#">
                     <img src="images/ico/insta.svg" alt="intagram">
                 </a></li>
@@ -50,15 +52,234 @@
             <div class="main__container">
                 <div class="main__text">
                     <h1>Fall deeper in love <br>with<br>humanity.</h1>
-                    <p>Get to know the world through our concise, informative and inspiring guides.</p>
+                    <p>Get to know the world through our concise, <br>informative and inspiring guides.</p>
                     <a href="">Shop now</a>
                 </div>
                 <div class="main__img">
-                    <img src="images/image_1.svg">
+                    <img src="images/image_1.jpg">
+                </div>
+            </div>
+        </section>
+        <section class="sellers_page sellers">
+            <div class="guide__container">
+                <h2>Our guides explain countries and cultures.</h2>
+                <div class="guide__container_text">
+                <p>
+                    Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.
+                </p>
+                <p>
+                    Available as ebooks here and on Amazon.
+                </p>
+                </div>
+            </div>
+            <h2>
+                Our best sellers
+            </h2>
+            <div class="sellers__container owl-carousel">
+                <article class="thalby_guide">
+                    <img src="images/sellers_section/image1.jpg">
+                    <h4>
+                        Thalby Guide to <br>French Culture and <br>Heritage
+                    </h4>
+                    <p>
+                        USD 6.99
+                    </p>
+                    <a href="">Add to cart</a>
+                </article>
+                <article class="thalby_guide">
+                    <img src="images/sellers_section/image2.jpg">
+                    <h4>
+                        Thalby Guide to <br>French People and <br>Society
+                    </h4>
+                    <p>
+                        USD 6.99
+                    </p>
+                    <a href="">Add to cart</a>
+                </article>
+                <article class="thalby_guide">
+                    <img src="images/sellers_section/image3.jpg">
+                    <h4>
+                        Thalby Guide to <br>German Culture and <br>Heritage
+                    </h4>
+                    <p>
+                        USD 6.99
+                    </p>
+                    <a href="">Add to cart</a>
+                </article>
+            </div>
+        </section>
+        <section class="society">
+            <article class="description__container">
+                <div class="img_block">
+                    <img src="images/people.jpg">
+                </div>
+                <div class="text_block">
+                    <h3>
+                        People and Society
+                    </h3>
+                    <p>
+                        Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.
+                    </p>
+                    <a href="">Shop Society Guides</a>
+                </div>
+            </article>
+        </section>
+        <section class="society culture">
+            <article class="description__container">
+                <div class="text_block">
+                    <h3>
+                        People and Society
+                    </h3>
+                    <p>
+                        Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.
+                    </p>
+                    <a href="">Shop Culture Guides</a>
+                </div>
+                <div class="img_block">
+                    <img src="images/culture.jpg">
+                </div>
+            </article>
+        </section>
+        <section class="society power">
+            <article class="description__container">
+                <div class="img_block">
+                    <img src="images/power.jpg">
+                </div>
+                <div class="text_block">
+                    <h3>
+                        People and Society
+                    </h3>
+                    <p>
+                        Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.
+                    </p>
+                    <a href="">Coming 2022!</a>
+                </div>
+            </article>
+        </section>
+        <section class="points">
+            <div class="points__container">
+                <h3>
+                    Some of the features that<br>make Thalby guides unique
+                </h3>
+                <div class="points__flex">
+                    <div class="pointer">Written by<br>locals</div>
+                    <div class="pointer">Packed with<br>insight</div>
+                    <div class="pointer">Interviews with<br>diverse voices</div>
+                    <div class="pointer">Key facts and<br>etiquette tips</div>
+                    <div class="pointer">A concise<br>1-hour read</div>
+                    <div class="pointer">Instant<br>digital access</div>
+                </div>
+            </div>
+        </section>
+        <section class="interviews">
+            <div class="interviews__container">
+                <h3>
+                    Each Thalby guide includes interviews with<br>a range of fascinating voices, such as
+                </h3>
+                <div class="interviews__items">
+                    <article class="interviews__item">
+                    <img src="images/interviews_section/1_1.webp">
+                    <h4>
+                        "I don’t like things to be<br>conventional. If it’s too<br>nice, I bring disorder."
+                    </h4>
+                    <p>
+                        Camille Muller,<br>Landscape Designer, France
+                    </p>
+                    <a href="">Discover</a>
+                    </article>
+                    <article class="interviews__item">
+                        <img src="images/interviews_section/1_2.webp">
+                        <h4>
+                            "Magic is not magic in<br>the sense that I can just<br>wish for anything."
+                        </h4>
+                        <p>
+                            Sonia Kowalewski,<br>Witch, Germany
+                        </p>
+                        <a href="">Discover</a>
+                    </article>
+                    <article class="interviews__item">
+                        <img src="images/interviews_section/1_3.webp">
+                        <h4>
+                            "I was eight years old<br>when I entered my first<br> competition. I won it."
+                        </h4>
+                        <p>
+                            Lilly Stoephasius,<br>Skateboarder, Germany
+                        </p>
+                        <a href="">Discover</a>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="keep">
+            <div class="keep__container">
+                <h3>
+                    Keep in touch
+                </h3>
+                <p>Get our travel advice, global views and travel freebies in your<br> inbox</p>
+                <div class="keep__form">
+                    <form action="/notHeHe" method="post">
+                        <div class="keep__input_name">
+                        <label for="name">First name</label>
+                        <input type="text" placeholder="First name" id="name">
+                        <label for="last">Last name</label>
+                        <input type="text" placeholder="Last name" id="last">
+                        </div>
+                        <div class="keep__input_email">
+                        <label for="email">Email</label>
+                        <input type="email" placeholder="Email" id="email">
+                        </div>
+                        <div class="keep__button">
+                        <button type="submit">Subscribe</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__info">
+                <div class="footer__ico">
+                    <div class="footer__logo">
+                        <a href="#" class="header__logo">
+                            <img src="images/logo_footer.svg" alt="logo"></a>
+                    </div>
+                    <ul class="footer__social">
+                        <li><a href="#">
+                            <img src="images/ico/FB.svg" alt="facebook">
+                        </a></li>
+                        <li><a href="#">
+                            <img src="images/ico/insta2.svg" alt="instagram">
+                        </a></li>
+                        <li><a href="#">
+                            <img src="images/ico/twit.svg" alt="twitter">
+                        </a></li>
+                    </ul>
+                </div>
+                <div class="footer__about">
+                    <ul class="footer__about_list">
+                        <li>ABOUT</li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Terms and Conditions</a></li>
+                        <li><a href="">Write for Us</a></li>
+                    </ul>
+                    <ul class="footer__about_contact">
+                        <li>CONTACT</li>
+                        <li><a href="">Email hi@thalby.com</a></li>
+                        <li><a href="">Help</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__year">
+                <p>
+                    Thalby LLC © 2021
+                </p>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
