--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 
-
-
 </head>
 <body>
     <header>
@@ -56,7 +54,7 @@
                     <a href="">Shop now</a>
                 </div>
                 <div class="main__img">
-                    <img src="images/image_1.jpg">
+                    <img src="images/image_1.jpg" alt="main_image">
                 </div>
             </div>
         </section>
@@ -77,7 +75,7 @@
             </h2>
             <div class="sellers__container owl-carousel">
                 <article class="thalby_guide">
-                    <img src="images/sellers_section/image1.jpg">
+                    <img src="images/sellers_section/image1.jpg" alt="guide_image">
                     <h4>
                         Thalby Guide to <br>French Culture and <br>Heritage
                     </h4>
@@ -87,7 +85,7 @@
                     <a href="">Add to cart</a>
                 </article>
                 <article class="thalby_guide">
-                    <img src="images/sellers_section/image2.jpg">
+                    <img src="images/sellers_section/image2.jpg" alt="guide_image">
                     <h4>
                         Thalby Guide to <br>French People and <br>Society
                     </h4>
@@ -97,7 +95,7 @@
                     <a href="">Add to cart</a>
                 </article>
                 <article class="thalby_guide">
-                    <img src="images/sellers_section/image3.jpg">
+                    <img src="images/sellers_section/image3.jpg" alt="guide_image">
                     <h4>
                         Thalby Guide to <br>German Culture and <br>Heritage
                     </h4>
@@ -111,7 +109,7 @@
         <section class="society">
             <article class="description__container">
                 <div class="img_block">
-                    <img src="images/people.jpg">
+                    <img src="images/people.jpg" alt="society_image">
                 </div>
                 <div class="text_block">
                     <h3>
@@ -136,14 +134,14 @@
                     <a href="">Shop Culture Guides</a>
                 </div>
                 <div class="img_block">
-                    <img src="images/culture.jpg">
+                    <img src="images/culture.jpg" alt="culture_image">
                 </div>
             </article>
         </section>
         <section class="society power">
             <article class="description__container">
                 <div class="img_block">
-                    <img src="images/power.jpg">
+                    <img src="images/power.jpg" alt="power_image">
                 </div>
                 <div class="text_block">
                     <h3>
@@ -178,7 +176,7 @@
                 </h3>
                 <div class="interviews__items">
                     <article class="interviews__item">
-                    <img src="images/interviews_section/1_1.webp">
+                    <img src="images/interviews_section/1_1.webp" alt="interview_image">
                     <h4>
                         "I don’t like things to be<br>conventional. If it’s too<br>nice, I bring disorder."
                     </h4>
@@ -188,7 +186,7 @@
                     <a href="">Discover</a>
                     </article>
                     <article class="interviews__item">
-                        <img src="images/interviews_section/1_2.webp">
+                        <img src="images/interviews_section/1_2.webp" alt="interview_image">
                         <h4>
                             "Magic is not magic in<br>the sense that I can just<br>wish for anything."
                         </h4>
@@ -198,7 +196,7 @@
                         <a href="">Discover</a>
                     </article>
                     <article class="interviews__item">
-                        <img src="images/interviews_section/1_3.webp">
+                        <img src="images/interviews_section/1_3.webp" alt="interview_image">
                         <h4>
                             "I was eight years old<br>when I entered my first<br> competition. I won it."
                         </h4>
